--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
         <div class="footer-content">
             <div class="footer-left">
                 <h3>SEREPAR</h3>
+                <p>&copy; 2024 SEREPAR, All Rights Reserved</p>
             </div>
             <div class="footer-right">
-                <p>SEREPAR Sprl Kinshasa, 61 Avenue des Coteaux, P.O. Box 3875, Kinshasa Gombe, Quartier des Cliniques, Kinshasa Gombe</p>
-                <p>SEREPAR cc Johannesburg, 6 Saint Francis Street, Wendywood extension 4, Sandton 2146</p>
+                <p>SEREPAR Sprl Kinshasa: 61 Avenue des Coteaux, P.O. Box 3875, Kinshasa Gombe, Quartier des Cliniques, Kinshasa Gombe</p>
+                <p>SEREPAR cc Johannesburg: 6 Saint Francis Street, Wendywood extension 4, Sandton 2146</p>
             </div>
         </div>
         <div class="footer-bottom">
