--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>SEREPAR Notable Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>SEREPAR Projects</h1>
+        <h1>SEREPAR Notable Projects</h1>
     </header>
     <main>
         <section class="projects">
@@ -56,16 +56,19 @@
                 </ul>
             </div>
         </section>
+        <div class="inquire-section">
+            <p>Wanna be part of our Projects? Click "inquire" below</p>
+            <button onclick="location.href='contact.html'">Inquire</button>
+        </div>
     </main>
     <footer>
         <div class="footer-content">
             <div class="footer-left">
                 <h3>SEREPAR</h3>
-                <p>&copy; 2024 SEREPAR, All Rights Reserved</p>
             </div>
             <div class="footer-right">
                 <p>SEREPAR Sprl Kinshasa: 61 Avenue des Coteaux, P.O. Box 3875, Kinshasa Gombe, Quartier des Cliniques, Kinshasa Gombe</p>
-                <p>SEREPAR cc Johannesburg: 6 Saint Francis Street, Wendywood extension 4, Sandton 2146</p>
+                <p>SEREPAR Cc Johannesburg: 6 Saint Francis Street, Wendywood extension 4, Sandton 2146</p>
             </div>
         </div>
         <div class="footer-bottom">
