--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="footer-content">
             <div class="footer-left">
                 <h3>SEREPAR</h3>
+                <p>&copy; 2024 SEREPAR, All Rights Reserved</p>
             </div>
             <div class="footer-right">
                 <p>SEREPAR Sprl Kinshasa: 61 Avenue des Coteaux, P.O. Box 3875, Kinshasa Gombe, Quartier des Cliniques, Kinshasa Gombe</p>
