--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEREPAR Notable Projects</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>SEREPAR Notable Projects</h1>
+        <h1>SEREPAR Projects</h1>
     </header>
     <main>
         <section class="projects">
@@ -57,7 +57,7 @@
             </div>
         </section>
         <div class="inquire-section">
-            <p>Wanna be part of our Projects? Click "inquire" below</p>
+            <p>Wanna be part of our Projects? Click on "Inquire" below</p>
             <button onclick="location.href='contact.html'">Inquire</button>
         </div>
     </main>
